2000-05-08  Dave Cole <dave@dccs.com.au>

	* common/map.h: Changed the visited attribute in Edge and Node to
	gint for new longest road algorithm.

	* common/map_query.c: Implemented new longest road algorithm which
	can handle edge cycles.
	
	* server/develop.c: Fixed "ERR wrong-plenty" bug.  Was using
	variable before it received a value in resource_available().
	
2000-05-07  Andy Heroff <aheroff@mediaone.net>

	* common/log.c, common/log.h: Added log to console if use_console
	  boolean is set by call to log_set_use_console_bool().

2000-05-07  Dave Cole <dave@dccs.com.au>

	* common/cost.c: Fixed cost of bridges.

	* client/legend.c: Show cost of ships and bridges when
	appropriate.
	
	* client/setup.c: Check num_build_type[] in setup_can_build_*().
	
2000-05-06  Dave Cole <dave@dccs.com.au>

	* client/Makefile.am: Added bridge.png, removed ship_building.c

	* gnocatan.spec, debian/gnocatan-server.files,
	server/four-islands.game: Added basic Seafarers game and
	bridge.png.

	* client/road.png: Rotated road bitmap to match drawing in
	identity panel.

	* client/bridge.png: Added bridge bitmap.

	* client/build.c, client/stock.c, client/turn.c,
	client/identity.c: Added bridge support.

	* client/client.c: Added bridge support.  Fixed setup statusbar
	prompts.  Merged road/ship/bridge setup code.  Fixed road building
	development to allow ships and bridges and removed ship building
	development.

	* client/ship_building.c: Deleted file - code was obsolete.

	* client/client.h, client/develop.c: Fixed road building
	development to allow ships and bridges and removed ship building
	development.

	* client/gui.c: Added bridge toolbar button.

	* client/guimap.c, client/guimap.h: Added polygon for bridge
	shape.  Added bridge drawing and cursor BRIDGE_CURSOR.

	* client/road_building.c: Fix road building to build ships and
	bridges in games which use them.

	* client/setup.c: Add support for ships and bridges in games which
	use them.
